--- a/MVC/Areas/Admin/Views/OrderDetails/ConfirmDelete.cshtml
+++ b/MVC/Areas/Admin/Views/OrderDetails/ConfirmDelete.cshtml
@@ -1,5 +1,5 @@
 ﻿@model MVC.Areas.Admin.Models.DeleteDetailViewModel
-@using (Html.BeginForm("Delete", "ProductDetails", FormMethod.Post, new { id = "formConfirmDelete"}))
+@using (Html.BeginForm("Delete", "OrderDetails", FormMethod.Post, new { id = "formConfirmDelete"}))
 {
     <div class="row">
         <div class="col-auto mx-auto">
