--- a/MVC/Areas/Admin/Views/ManageOrders/Index.cshtml
+++ b/MVC/Areas/Admin/Views/ManageOrders/Index.cshtml
@@ -3,7 +3,7 @@
 @using PagedList.Mvc;
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="navbar order-navbar  navbar-expand-md">
@@ -30,18 +30,17 @@
             </div>
         </div>
     </form>
-    @foreach (var item in Model)
-    {
+    @*@foreach (var item in Model)
+    {*@
         <div class="container py-2 bg-dark-light my-3">
             <div class="row">
                 <div class="col-12 px-4">
                     <span class="text-danger float-right h6">
-                        @item.Status
+                        @*@item.Status*@
+                        Đã thanh toán
                     </span>
                 </div>
             </div>
-            @foreach (var product in item.Products)
-            {
                 <div class="row pb-1">
                     <div class="col-1">
                         <div class="row">
@@ -69,7 +68,7 @@
                         </span>
                     </div>
                 </div>
-            }
+            
             <div class="row mt-3">
                 <div class="col-2 offset-8">
                     <span class="text-danger h5 float-right">Tổng tiền:</span>
@@ -88,15 +87,15 @@
                 </div>
             </div>
         </div>
-    }
-    @Html.PagedListPager(Model, page => Url.Action("Index", new { page }), new PagedListRenderOptions
+    @*}*@
+    @*@Html.PagedListPager(Model, page => Url.Action("Index", new { page }), new PagedListRenderOptions
     {
             LiElementClasses = new string[] { "page-item" },
             UlElementClasses = new string[] { "pagination", "justify-content-center" },
             Display = PagedListDisplayMode.IfNeeded,
         ContainerDivClasses = new[] { "my-paging" },
             MaximumPageNumbersToDisplay = 5
-            })
+            })*@
 </div>
 @section scripts{
     <script>
@@ -123,3 +122,4 @@
         return false;
     }
 </script>
+
