--- a/MVC/Areas/Admin/Views/ManageOrders/Index.cshtml
+++ b/MVC/Areas/Admin/Views/ManageOrders/Index.cshtml
@@ -1,12 +1,14 @@
-﻿@model PagedList.IPagedList<MVC.Models.OrderViewModel>
+﻿
 @using PagedList;
 @using PagedList.Mvc;
 @{
-    ViewBag.Title = "Index";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+                /**/
+
+                ViewBag.Title = "Index";
+                Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="navbar order-navbar  navbar-expand-md">
+<div class="navbar navbar-light bg-dark-light  navbar-expand-md">
     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarOrderContent" aria-controls="navbarOrderContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,7 +24,7 @@
     </div>
 </div>
 <div class="container px-5 py-4 ">
-    <form action="/Orders/Index" method="post" class="my-3" id="formOrder">
+    <form action="/Admin/ManageOrders/Index" method="post" class="my-3" id="formOrder">
         <div class="form-row">
             <div class="col-3">
                 <input type="text" name="Status" value="@ViewBag.Status" hidden id="status" />
@@ -31,77 +33,75 @@
         </div>
     </form>
     @*@foreach (var item in Model)
-    {*@
-        <div class="container py-2 bg-dark-light my-3">
-            <div class="row">
-                <div class="col-12 px-4">
-                    <span class="text-danger float-right h6">
-                        @*@item.Status*@
-                        Đã thanh toán
-                    </span>
-                </div>
-            </div>
-                <div class="row pb-1">
-                    <div class="col-1">
-                        <div class="row">
-                            <div class="col-auto mx-auto">
-                                <img src="@product.Image" alt="Alternate Text" width="80" height="130" />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-9 px-4">
-                        <span class="h5">@product.Name</span>
-                        <br />
-                        <span>x@(product.Count)</span>
-                    </div>
-                    <div class="col-2 align-self-center px-4">
-                        <span class="float-right">
-                            @if (product.PromotionPrice != product.Price)
-                            {
-                                <del>@(product.Price)đ</del>
-                                <span class="text-danger">@(product.PromotionPrice)đ</span>
-                            }
-                            else
-                            {
-                                <span>@(product.Price)đ</span>
-                            }
-                        </span>
-                    </div>
-                </div>
-            
-            <div class="row mt-3">
-                <div class="col-2 offset-8">
-                    <span class="text-danger h5 float-right">Tổng tiền:</span>
-                </div>
-                <div class="col-2 px-4">
-                    <span class="text-danger h5 float-right">@(item.TotalMoney)đ</span>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 px-4">
-                    <a href="#" class="btn btn-info float-right ml-4">Mua lần nữa</a>
-                    <form action="/Orders/Detail" method="post">
-                        <input type="text" name="OrderID" value="@item.ID" hidden />
-                        <button type="submit" class="btn btn-info float-right">Xem chi tiết</button>
-                    </form>
-                </div>
+        {*@
+    <div class="container py-2 bg-dark-light my-3">
+        <div class="row">
+            <div class="col-12 px-4">
+                <span class="text-danger float-right h6">
+                    @*@item.Status*@
+                    Đã thanh toán
+                </span>
             </div>
         </div>
+        <div class="row pb-1">
+            <div class="col-1">
+                <div class="row">
+                    <div class="col-auto mx-auto">
+                        <img src="~/Resource/support.png" alt="Alternate Text" width="80" height="80" />
+                    </div>
+                </div>
+            </div>
+            <div class="col-9 px-4 m-3">
+                <span class="h5">Nguyễn Huỳnh phúc</span>
+                <br />
+                <span>199000 <u>đ</u></span>
+            </div>
+
+        </div>
+
+
+        <div class="row">
+            <div class="col-12 px-4">
+                <div class="row">
+                    <div class="col-auto ml-auto pr-0">
+                        <form action="/Admin/ManageOrders/Detail" method="post" class="w-auto">
+                            <input type="text" name="OrderID" value="" hidden />
+                            <button type="submit" class="btn btn-info float-right">Xem chi tiết</button>
+                        </form>
+                    </div>
+                    <div class="col-auto pr-0">
+                        <form action="/Admin/ManageOrders" method="post" class="w-auto">
+                            <input type="text" name="OrderID" value="" hidden />
+                            <button type="submit" class="btn btn-success float-right">Xác nhận</button>
+                        </form>
+                    </div>
+                    <div class="col-auto pr-0">
+                        <form action="/Admin/ManageOrders" method="post" class="w-auto">
+                            <input type="text" name="OrderID" value="" hidden />
+                            <button type="submit" class="btn btn-danger float-right">Hủy</button>
+                        </form>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
     @*}*@
     @*@Html.PagedListPager(Model, page => Url.Action("Index", new { page }), new PagedListRenderOptions
-    {
-            LiElementClasses = new string[] { "page-item" },
-            UlElementClasses = new string[] { "pagination", "justify-content-center" },
-            Display = PagedListDisplayMode.IfNeeded,
-        ContainerDivClasses = new[] { "my-paging" },
-            MaximumPageNumbersToDisplay = 5
-            })*@
+        {
+                LiElementClasses = new string[] { "page-item" },
+                UlElementClasses = new string[] { "pagination", "justify-content-center" },
+                Display = PagedListDisplayMode.IfNeeded,
+            ContainerDivClasses = new[] { "my-paging" },
+                MaximumPageNumbersToDisplay = 5
+                })*@
 </div>
 @section scripts{
     <script>
-        $("ul.order-navbar-nav li.super-black a").removeClass("super-black");
-        $("@ViewBag.OrderActive a").addClass("super-black");
+        
         $(document).ready(function () {
+            $("li.order-bar").removeClass("active");
+            $("@ViewBag.OrderActive").addClass("active");
             $(".my-paging ul li a").addClass("page-link");
             $("#TextOrder").bind("keyup", function (event) {
                 if (event.keyCode === 13) {
